Fixed circuit size error issues

--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ MEMORY_AFTER_CIRCUIT_SIZE=7..24
 PALADIN_SERIALIZER=POSTCARD # POSTCARD/CMOP (if not provided, uses value from `default` trait)
 # PALADIN_RUNTIME=MEMORY # MEMORY/AMQP: -> DEFAULTS TO MEMORY
 # PALADIN_AMQP_NUM_WORKERS=1 # ONLY WHEN RUNTIME IS "MEMORY"
-PSM_CIRCUIT_PERSISTENCE=NONE # NONE/DISK
+PSM_CIRCUIT_PERSISTENCE=DISK # NONE/DISK
 # PALADIN_AMQP_URI=URI
-# PSM_TABLE_LOAD_STRAT= MONOLITHIC / ON_DEMAND
+PSM_TABLE_LOAD_STRAT=MONOLITHIC # / ON_DEMAND
 # SERVER_ADDR=0.0.0.0:8080 # Defaults to "0.0.0.0:8080"
 # PROOF_OUT_LOCAL_DIRPATH=proofs_out/ 
 # LOCAL_BENCHMARK_DIRPATH = "benchmark_out/" 
