--- a/zero_bin/coordinator/Cargo.toml
+++ b/zero_bin/coordinator/Cargo.toml
@@ -38,3 +38,7 @@ futures = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = "2.5.1"
+
+[build-dependencies]
+cargo_metadata = "0.18.1"
+anyhow = { workspace = true }
