--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   build-pgo:
-    # if: ${{ false }}  # disable for now
+    if: ${{ false }}  # disable for now
     name: Build pgo docker image
     runs-on: ubuntu-latest
     permissions:
@@ -67,7 +67,7 @@ jobs:
 
   deploy-pgo:
     name: Deploy pgo-worker to GKE
-    # if: ${{ false }}  # disable for now
+    if: ${{ false }}  # disable for now
     runs-on: ubuntu-latest
     needs: build-pgo
     permissions:
@@ -106,7 +106,7 @@ jobs:
 
   run-benchmark:
     name: Run benchmarks tests
-    # if: ${{ false }}  # disable for now
+    if: ${{ false }}  # disable for now
     runs-on: gha-runner-set
     permissions:
       contents: 'read'
@@ -169,7 +169,7 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
-    needs: run-benchmark
+    # needs: run-benchmark
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -204,11 +204,11 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
 
-      - name: Pull pgo file from GCS
-        run: |-
-          mkdir -p ./target/pgo-profiles
-          gsutil cp $(gsutil -m ls -l gs://zkevm-csv/profiles | grep $(date -I) | sed 's/.*\(gs:\/\/\)/\1/' | tail -n -1) ./target/pgo-profiles
-          ls -lh ./target/pgo-profiles
+      # - name: Pull pgo file from GCS
+      #   run: |-
+      #     mkdir -p ./target/pgo-profiles
+      #     gsutil cp $(gsutil -m ls -l gs://zkevm-csv/profiles | grep $(date -I) | sed 's/.*\(gs:\/\/\)/\1/' | tail -n -1) ./target/pgo-profiles
+      #     ls -lh ./target/pgo-profiles
 
       - name: Login to GCR
         uses: docker/login-action@v3
@@ -221,7 +221,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: optimized-worker.Dockerfile
+          # file: optimized-worker.Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.worker-meta.outputs.tags }}
           labels: ${{ steps.worker-meta.outputs.labels }}
