--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -204,11 +204,11 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
 
-      - name: Pull pgo file from GCS
-        run: |-
-          mkdir -p ./pgo-profiles
-          gsutil cp $(gsutil -m ls -l gs://zkevm-csv/profiles | grep $(date -I) | sed 's/.*\(gs:\/\/\)/\1/' | tail -n -1) ./pgo-profiles
-          ls -lh ./pgo-profiles
+      # - name: Pull pgo file from GCS
+      #   run: |-
+      #     mkdir -p ./pgo-profiles
+      #     gsutil cp $(gsutil -m ls -l gs://zkevm-csv/profiles | grep $(date -I) | sed 's/.*\(gs:\/\/\)/\1/' | tail -n -1) ./pgo-profiles
+      #     ls -lh ./pgo-profiles
 
       - name: Login to GCR
         uses: docker/login-action@v3
@@ -221,8 +221,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: optimized-worker.Dockerfile
-          # file: Dockerfile
+          # file: optimized-worker.Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.worker-meta.outputs.tags }}
           labels: ${{ steps.worker-meta.outputs.labels }}
