--- a/deploy/helm/zero-bin/values.yaml
+++ b/deploy/helm/zero-bin/values.yaml
@@ -98,6 +98,8 @@ hull:
         pod:
           containers:
             worker:
+              command:
+                - worker
               image:
                 repository: _HT!us.gcr.io/immutable-418115/{{ (index . "$").Values.hull.config.specific.workerImageName }}
                 tag: _HT*hull.config.specific.version
