Don't specify linker in .cargo/config.toml

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,5 +3,5 @@
 # https://github.com/dtolnay/linkme/pull/88
 rustflags = ["-Z", "linker-features=-lld"]
 
-[target.x86_64-unknown-linux-gnu]
-linker = "clang-16"
+#[target.x86_64-unknown-linux-gnu]
+#linker = "clang-16"
